--- a/week2/linking_stylesheet/index.html
+++ b/week2/linking_stylesheet/index.html
@@ -19,5 +19,17 @@
         <img src="images/plane2.jpg" width="300" height="250">
         <img src="images/truck.jpg" width="300" height="250">
         <img src="images/yacht.jpg" width="300" height="250">
+        <ul>
+            <li>Apples</li>
+            <li>Grapes</li>
+            <li>Orange</li>
+            <li>Strawberries</li>
+        </ul>
+        <ol>
+            <li>Eggs</li>
+            <li>Milk</li>
+            <li>Flour</li>
+            <li>Sugar</li>
+        </ol>
     </body>
 </html>
