#HTML5 #div boxes are awesome, and I just learned how to use them in the #Apptrepreneur course @ITvarsity

--- a/week2/linking_stylesheet/index.html
+++ b/week2/linking_stylesheet/index.html
@@ -4,6 +4,11 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div id="menu-bar">
+            <a href="index.html">Home</a>
+            <a href="index.html">About</a>
+            <a href="index.html">Contact</a>
+        </div>
         <h1>Home page</h1>
         <h2>This is heading 2</h2>
         <h3>This is heading 3</h3>
@@ -12,6 +17,7 @@
         <h6>This is heading 6</h6>
         <p>Hello everyone</p>
         <p>This is fun</p>
+        <p>Please <a href="http://www.compukids.me">click</a> here to go to compukids website</p>
         <img src="images/boat.jpg" width="300" height="250" alt="A boat on water">
         <img src="images/cablecar.jpg" width="300" height="250">
         <img src="images/city.jpg" width="300" height="250">
