--- a/week2/superhero_App/index.html
+++ b/week2/superhero_App/index.html
@@ -4,13 +4,23 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <h2>Thor</h2>
         <div class="gallery">
             <img src="images/avengers_01.jpg">
-            <img src="images/avengers_02.jpg">
-            <img src="images/avengers_03.jpg">
-            <img src="images/avengers_04.jpg">
-            <img src="images/avengers_05.jpg">
-            <img src="images/avengers_06.jpg">
         </div>
+        <h4>Bio</h4>
+        <p>Ful Name: Thor Odinson</p>
+        <p>Place Of Birth: Asgard</p>
+        <p>Aligment: Good</p>
+        <p>Gender: Male</p>
+        <p>Race: Asgardian</p>
+        <br/>
+        <h4>Power Stats</h4>
+        <p>Intelligence: 69%</p>
+        <p>Strength: 100%</p>
+        <p>Speed: 92%</p>
+        <p>Durability: 100%</p>
+        <p>Power: 100%</p>
+        <p>Combat: 85%</p>
     </body>
 </HTML>
