add more avegers

--- a/week2/superhero_App/index.html
+++ b/week2/superhero_App/index.html
@@ -6,21 +6,12 @@
     <body>
         <h2>Thor</h2>
         <div class="gallery">
-            <img src="images/avengers_01.jpg">
+            <a href="avenger1.html"><img src="images/avengers_01.jpg"></a>
+            <a href="avenger2.html"><img src="images/avengers_02.jpg"></a>
+            <a href="avenger3.html"><img src="images/avengers_03.jpg"></a>
+            <a href="avenger4.html"><img src="images/avengers_04.jpg"></a>
+            <a href="avenger5.html"><img src="images/avengers_05.jpg"></a>
+            <a href="avenger6.html"><img src="images/avengers_06.jpg"></a>
         </div>
-        <h4>Bio</h4>
-        <p>Ful Name: Thor Odinson</p>
-        <p>Place Of Birth: Asgard</p>
-        <p>Aligment: Good</p>
-        <p>Gender: Male</p>
-        <p>Race: Asgardian</p>
-        <br/>
-        <h4>Power Stats</h4>
-        <p>Intelligence: 69%</p>
-        <p>Strength: 100%</p>
-        <p>Speed: 92%</p>
-        <p>Durability: 100%</p>
-        <p>Power: 100%</p>
-        <p>Combat: 85%</p>
     </body>
 </HTML>
