--- a/week3/pine_city_zoo/animals.html
+++ b/week3/pine_city_zoo/animals.html
@@ -9,13 +9,16 @@
                   <img src="images/logo.png"/>
             </div>
             <div id="tabs-top">
-                  <a href="#">ANIMALS</a>
+                  <a href="animals.html">ANIMALS</a>
                   <a href="index.html">MAP</a>
-                  <a href="#">PLACES</a>
+                  <a href="places.html">PLACES</a>
+            </div>
+            <div id="back">
+                <a href="index.html">Back</a>
             </div>
             <div id="main">
                 <div id="content">
-                    <a class="info-box" href="#">
+                    <a class="info-box" href="elephant.html">
                         <img class="right" src="images/next-arrow.png"/>
                         <img src="images/elephant-tn.png"/>
                         <h3>ELEPHANT</h3>
