--- a/week3/pine_city_zoo/feedback.html
+++ b/week3/pine_city_zoo/feedback.html
@@ -19,24 +19,20 @@
             <div id="main">
                 <div id="content">
                     <div id="info-box-full">
-                        <img src="images/garden-amphitheater.jpg">
-                        <h3>AMPHITHEATER</h3>
-                        <p><p>Learn and entertained.Come and catch daily and educational and entertaning shows,
-                        tal demonstrations at amphitheatre club.</p>
-                      <p>Today's program:</p></p>
-                      <ul>
-                          <li>9h00am   : A Bug's life - Play</li>
-                          <li>11h00am  : Penny and her Penguins</li>
-                          <li>14h00am  : Bigs cats of Africa - a Documentary</li>
-                      </ul>
-                      <p>WHERE WILL YOU FIND IT?</p>
-                      <p>The amphitheatre is to the west of the main entrance.e</p> 
+                        <img src="images/giraffe-large.jpg">
+                        <h3>WE'D LOVE TO HEAR FROM YOU</h3>
+                        <P>We always strive to do better, so your feedback is important to us. Please fill in the 
+                        form below</P>
+                        <input type="text" placeholder="Your Name" id="name">
+                        <input type="text" placeholder="Your Email" id="email">
+                        <textarea placeholder="type your message here"></textarea>
+                        <a class="button" href="message-received.html">SUBMIT</a>
                     </div>
                 </div>
             </div>
             <div id="tabs-bottom">
                    <a href="weather.html">WEATHER</a>
-                   <a href="feedback.html">FEEDBACK</a>
+                   <a href="#">FEEDBACK</a>
             </div>
       </body>
 </html>
