--- a/week4/javascript_basic/function.html
+++ b/week4/javascript_basic/function.html
@@ -7,7 +7,7 @@
         <h1 id="heading" onclick="changeText()">JavaScript</h1>
         <p id="paragraph"></p>
         <script>
-            addNumbers(10, 7);
+            document.getElementById("paragraph").innerHTML =  addNumbers(10, 20);
             function changeText(){
                 if(document.getElementById("heading").innerHTML=='JavaScript'){
                     document.getElementById("heading").innerHTML='Is awesome'
@@ -16,7 +16,7 @@
                     document.getElementById("heading").innerHTML='JavaScript'}
             }
             function addNumbers(num1, num2){
-                document.getElementById("paragraph").innerHTML = num1 + num2
+                return num1 + num2;
             }
         </script>
     </body>
